--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,9 @@
 {
-  "extends": ["prettier"]
+    "extends": ["prettier"],
+
+    "parser": "babel-eslint",
+
+    "env": {
+        "es6": true
+    }
 }
